finished work page and resume page

--- a/home.html
+++ b/home.html
@@ -157,7 +157,7 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <h6 class="text-muted">Dates:2017 - Present</h6>
+                            <h6 class="text-muted">Dates: 2017 - Present</h6>
                         </div>
                     </div>
                 </div>
@@ -175,18 +175,25 @@
                 <p>Some of the projects I have built. More can be found on my Github</p>
                 <div class="row">
                     <div class="col-md-3">
-                        <a href="images/MeetInTheMiddle.png" data-toggle="lightbox">
+                        <a href="images/MeetInTheMiddle.png" data-toggle="lightbox" data-title="Meet In The Middle">
                             <img src="images/MeetInTheMiddle.png" alt="" class="img-fluid">
                         </a>
+                        <a href="http://www.middlemeet.co" target="_blank"><button type="button" class="btn btn-outline-secondary my-3">Visit Website</button></a>
                     </div>
                     <div class="col-md-3">
-                        <a href="images/FinanceTracker.png" data-toggle="lightbox">
+                        <a href="images/FinanceTracker.png" data-toggle="lightbox" data-title="Finance Portfolio">
                             <img src="images/FinanceTracker.png" alt="" class="img-fluid">
+                        </a>
+                        <a href="http://at-rails-finance-tracker.herokuapp.com" target="_blank">
+                            <button type="button" class="btn btn-outline-secondary my-3">Visit Website</button>
                         </a>
                     </div>
                     <div class="col-md-3">
-                        <a href="images/RailsBlogApp.png" data-toggle="lightbox">
+                        <a href="images/RailsBlogApp.png" data-toggle="lightbox" data-title="Rails Blog">
                             <img src="images/RailsBlogApp.png" alt="" class="img-fluid">
+                        </a>
+                        <a href="http://additional-testing-blog.herokuapp.com/" target="_blank">
+                            <button type="button" class="btn btn-outline-secondary my-3">Visit Website</button>
                         </a>
                     </div>
                     
@@ -217,11 +224,11 @@
         <div id="contact" class="collapse">
             <div class="card card-body bg-danger text-white py-5">
                 <h2>Contact Me</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis dolor quibusdam, laborum in et assumenda.</p>
+                <p>You can contact me through the social links above (Email and/or LinkedIn is best) or through the form below.</p>
             </div>
             <div class="card card-body py-5">
                 <h3>Get in touch</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, quas.</p>
+                <p>Leave your name, email and a short message.</p>
                 <form>
                     <div class="form-group">
                         <div class="input-group input-group-lg">
@@ -256,7 +263,7 @@
         <footer id="main-footer" class="p-5 bg-dark text-dark">
             <div class="row">
                 <div class="col-md-6">
-                    <a href="#" class="btn btn-outline-light">
+                    <a href="AlbertBurchiResume.pdf" class="btn btn-outline-light">
                         <i class="fa fa-cloud"></i>Download Resume</a>
                 </div>
             </div>
