added dependecies for alertify js for building form to contact through email

--- a/home.html
+++ b/home.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/alertify.min.css" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/themes/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -229,7 +231,7 @@
             <div class="card card-body py-5">
                 <h3>Get in touch</h3>
                 <p>Leave your name, email and a short message.</p>
-                <form>
+                <form id="contact-form">
                     <div class="form-group">
                         <div class="input-group input-group-lg">
                             <span class="input-group-text bg-danger text-white" id="inputGroup-sizing-default">
@@ -278,6 +280,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
             crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/alertify.min.js"></script>
         <script>
             $('.port-item').click(function () {
                 $('.collapse').collapse('hide');
@@ -287,6 +290,8 @@
                 event.preventDefault();
                 $(this).ekkoLightbox();
             });
+
+            $
         </script>
 </body>
 
