--- a/home.html
+++ b/home.html
@@ -333,25 +333,28 @@
                 $(this).ekkoLightbox();
             });
 
-            $('#contact-form').submit(function(e) {
-                var name = document.getElementById('inputName');
-                var email = document.getElementById('inputEmail');
-                var message = document.getElementById('inputMessage');
+           $(document).ready(function () {
+                $('#contact-form').submit(function (e) {
+                    var name = document.getElementById('inputName');
+                    var email = document.getElementById('inputEmail');
+                    var message = document.getElementById('inputMessage');
 
-                if (!name.value || !email.value || !message.value) {
-                    alertify.error('Please check your input entries. Make sure to write something in every field.')
-                } else {
-                    $.ajax({
-                        url: "https://formspree.io/albert.burc@gmail.com",
-                        method: "POST",
-                        data: $(this).serialize(),
-                        dataType: "json"
-                    });
-                    e.preventDefault()
-                    $(this).get(0).reset()
-                    alertify.success('Message Sent!')
-                }
-            })
+                    if (!name.value || !email.value || !message.value) {
+                        alertify.error("Please check your entries. Make sure you enter your name, email and message.");
+                        return false;
+                    } else {
+                        $.ajax({
+                            method: 'POST',
+                            url: '//formspree.io/albert.burc@gmail.com',
+                            data: $('#contact-form').serialize(),
+                            datatype: 'json'
+                        });
+                        e.preventDefault();
+                        $(this).get(0).reset();
+                        alertify.success("Message sent !");
+                    }
+                });
+            });
         </script>
 </body>
 
