--- a/home.html
+++ b/home.html
@@ -275,7 +275,7 @@
                             <span class="input-group-text bg-danger text-white" id="inputGroup-sizing-default">
                                 <i class="fa fa-user"></i>
                             </span>
-                            <input type="text" class="form-control bg-dark text-white" id="inputName" placeholder="Name">
+                            <input type="text" class="form-control bg-dark text-white" id="inputName" placeholder="Name" name="name">
                         </div>
                     </div>
                     <div class="form-group">
@@ -283,7 +283,7 @@
                             <span class="input-group-text bg-danger text-white" id="inputGroup-sizing-default">
                                 <i class="fa fa-envelope"></i>
                             </span>
-                            <input type="email" class="form-control bg-dark text-white" id="inputEmail" placeholder="Email">
+                            <input type="email" class="form-control bg-dark text-white" id="inputEmail" placeholder="Email" name="email">
                         </div>
                     </div>
                     <div class="form-group">
@@ -291,7 +291,7 @@
                             <span class="input-group-text bg-danger text-white" id="inputGroup-sizing-default">
                                 <i class="fa fa-pencil"></i>
                             </span>
-                            <textarea rows="5" class="form-control bg-dark text-white" id="inputMessage" placeholder="Message"></textarea>
+                            <textarea rows="5" class="form-control bg-dark text-white" id="inputMessage" placeholder="Message" name="message"></textarea>
                         </div>
                     </div>
                     <input type="text" name="_gotcha" style="display:none" />
